@@ -31,6 +31,8 @@ LibSoX interface changes:
 
   o Added new variants of sox_open to allow read/write from/to memory
     buffers (in POSIX 2008 environment); see example5.c.  (robs)
+  o amrnb and amrwb formats can optionally use opencore-amr libraries.
+    (cbagwell)
 
 File formats:
 
